agregado de paginador, footer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Zapatillas para Todos: Modelos Únicos y Precios Increíbles">
     <meta property="og:description" content="Toda la variedad en zapatillas: actividades, talles, precios y modelos únicos. ¡Visitá la tienda y elegí tu par ideal!">
-    <meta property="og:url" content="https://tusitioweb.com/zapatillas-online">
-    <meta property="og:image" content="https://tusitioweb.com/imagenes/zapatillas-banner.jpg">
+    <meta property="og:url" content="https://zapa-store-react.infinityfreeapp.com/">
+    <meta property="og:image" content="https://zapa-store-react.infinityfreeapp.com/zapatillas-banner.jpg">
     <meta name="description" content="Encontrá zapatillas para todas las actividades, talles y estilos. Modelos exclusivos, discontinuos y al mejor precio. ¡Tu próximo par te espera!">
     <title>Zapa Store React</title>
     <!-- Bootstrap -->
